--- a/package.json
+++ b/package.json
@@ -1,30 +1,27 @@
 {
-	"name": "connect-backend",
+	"name": "backend",
 	"version": "1.0.0",
 	"description": "",
-	"main": "app.js",
+	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node app.js",
-		"dev": "nodemon app.js",
-		"heroku-postbuild": "cd frontend && npm install && npm run build"
+		"start": "nodemon app.js"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"axios": "^1.4.0",
+		"axios": "^0.19.0",
 		"bcryptjs": "^2.4.3",
-		"express": "^4.18.2",
-		"express-validator": "^7.0.1",
-		"jsonwebtoken": "^9.0.1",
-		"mongodb": "^5.7.0",
-		"mongoose": "^7.4.1",
-		"mongoose-unique-validator": "^4.0.0",
-		"mongoose-validator": "^2.1.0",
-		"multer": "^1.4.5-lts.1",
-		"uuid": "^9.0.0"
+		"body-parser": "^1.19.0",
+		"express": "^4.17.1",
+		"express-validator": "^6.2.0",
+		"jsonwebtoken": "^8.5.1",
+		"mongoose": "^5.7.8",
+		"mongoose-unique-validator": "^2.0.3",
+		"multer": "^1.4.2",
+		"uuid": "^3.3.3"
 	},
 	"devDependencies": {
-		"prettier": "3.0.0"
+		"nodemon": "^1.19.4"
 	}
 }
